[package]
name = "rust-web-warp-learning"
version = "0.1.0"
edition = "2021"
authors = ["Crismus <lsc_00@126.com>"]
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
futures = "0.3.30"
tokio = {version = "1.37.0", features = ["rt", "rt-multi-thread", "io-util", "macros", "net", "socket2", "sync" ]}
tokio-stream = {version = "0.1.15", features = ["full"]}
tokio-util = {version = "0.7.10", features = ["codec"] }
warp = "0.3.7"
