[package]
name = "rust-web-warp-learning"
version = "0.1.0"
edition = "2021"
authors = ["Crismus <lsc_00@126.com>"]
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
features = "0.10.0"
futures = "0.3.30"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.116"
serde_with = "3.8.1"
chrono = { version = "0.4.23", features = ["serde"] }
ring = { version = "0.17.8", license = "OpenSSL" }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "migrate", "mysql", "chrono", "uuid", "macros"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "io-util", "macros", "net", "socket2", "sync" ] }
tokio-stream = { version = "0.1.15", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
warp = "0.3.7"
dotenv = "0.15.0"
rsa = { version = "0.9", features = ["hazmat"] }
